// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiTableHeader is rendered 1`] = `
<thead
  aria-label="aria-label"
  class="testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <tr>
    <td>
      children
    </td>
  </tr>
</thead>
`;

exports[`EuiTableHeader is rendered without <tr> 1`] = `
<thead>
  <tr>
    <td>
      children
    </td>
  </tr>
</thead>
`;
